Add a home page, sign-in menu and a personal details page
